--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,6 +2,11 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+Random Data Generation:
 
-Welcome to your new app.
+<br />
+Buttons need to go here
+
+
+<br />
+Grid with data from the database can go here.
