Added a new component to Generate Random Person Data and added some embedded json files for names.

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,11 +2,11 @@
 
 <PageTitle>Home</PageTitle>
 
-Random Data Generation:
 
 <br />
-Buttons need to go here
+<RandomDataGeneration></RandomDataGeneration>
 
 
 <br />
 Grid with data from the database can go here.
+<DataGrid></DataGrid>
