Used QuickGrid to show the random data that was generated and it pulls from SQL.

--- a/Components/DataGrid.razor
+++ b/Components/DataGrid.razor
@@ -1,5 +1,68 @@
-﻿<h3>Data Grid</h3>
+﻿@using BlazorMinimalAPI.Data_Models
+@using Microsoft.AspNetCore.Components.QuickGrid
+@rendermode InteractiveServer
+@attribute [StreamRendering]
+
+@inject HttpClient HttpClient
+
+<PageTitle>Data Grid</PageTitle>
+
+<h1>People Grid</h1>
+
+@if (people == null)
+{
+    <p><em>Loading...</em></p>
+}
+else
+{
+    <QuickGrid Items="people" Pagination="@pagination">
+        <PropertyColumn Property="@(p => p.Id)" Sortable="true" />
+        <PropertyColumn Property="@(p => p.FirstName)" Sortable="true" />
+        <PropertyColumn Property="@(p => p.LastName)" Sortable="true" />
+        <PropertyColumn Property="@(p => p.Title)" Sortable="true" />
+        <PropertyColumn Property="@(p => p.DateOfBirth)" Format="yyyy-MM-dd" Sortable="true" />
+        <PropertyColumn Property="@(p => p.Occupation)" Sortable="true" />
+        <PropertyColumn Property="@(p => p.SSN)" Sortable="true" />
+    </QuickGrid>
+
+    <Paginator State="@pagination" />
+}
+
 
 @code {
+    //private record Person(int PersonId, string Name, DateOnly PromotionDate);
+    PaginationState pagination = new PaginationState { ItemsPerPage = 100 };
+    private IQueryable<Person> people;
+
+    // {
+    //     new Person(10895, "Jean Martin", new DateOnly(1985, 3, 16)),
+    //     new Person(10944, "António Langa", new DateOnly(1991, 12, 1)),
+    //     new Person(11203, "Julie Smith", new DateOnly(1958, 10, 10)),
+    //     new Person(11205, "Nur Sari", new DateOnly(1922, 4, 27)),
+    //     new Person(11898, "Jose Hernandez", new DateOnly(2011, 5, 3)),
+    //     new Person(12130, "Kenji Sato", new DateOnly(2004, 1, 9)),
+    // }.AsQueryable();
+
+    protected override async Task OnInitializedAsync()
+    {
+        try
+        {
+            var response = await HttpClient.GetFromJsonAsync<List<Person>>("/person");
+
+
+            if(response != null)
+            {
+                Console.WriteLine("Got a response back.");
+                Console.WriteLine(response.Count);
+                people = response.AsQueryable<Person>();
+
+            }
+        }
+        catch(Exception ex)
+        {
+            Console.WriteLine($"There was an error. {ex.Message}");
+        }
+
+    }
 
 }
