--- a/Components/DataGrid.razor
+++ b/Components/DataGrid.razor
@@ -52,7 +52,7 @@ else
         }
         catch(Exception ex)
         {
-            Console.WriteLine($"There was an error. {ex.Message}");
+            Console.WriteLine($"There was an error getting data. {ex.Message} {ex.StackTrace}");
         }
 
     }
